# gui-python-smart-home-simulator-university

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/: main.py
