[project]
name = "smart-home-iot-simulator"
version = "1.0.0"
description = "A Tkinter-based GUI Smart Home IoT Simulator for university projects"
authors = [{ name = "Saeed Khanloo" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
iot-simulator = "src.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
